--- a/style.css
+++ b/style.css
@@ -1,48 +1,35 @@
 
 
-
-
-
-/* *FOOTER*
- */
- footer {
-    padding: 50px 0 65px;
+body {
+    font-size: 20px;
+    color: #212529;
+    font-family: 'Lora', 'Times New Roman', serif;
   }
   
-  footer .list-inline {
-    margin: 0;
-    padding: 0;
+  p {
+    line-height: 1.5;
+    margin: 30px 0;
   }
   
-  footer .copyright {
-    font-size: 14px;
-    margin-bottom: 0;
-    text-align: center;
+  p a {
+    text-decoration: underline;
   }
   
-  .btn {
-    font-size: 14px;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     font-weight: 800;
-    padding: 15px 25px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    border-radius: 0;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
   
-  .btn-primary {
-    background-color: #0085A1;
-    border-color: #0085A1;
+  a {
+    color: #212529;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
   }
-  
-  .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-    color: #fff;
-    background-color: #00657b !important;
-    border-color: #00657b !important;
-  }
-  
-  .btn-lg {
-    font-size: 16px;
-    padding: 25px 35px;
-  }
-  
+
+
+/* FOOTER */
