Updated CSS for Contact Page

--- a/style.css
+++ b/style.css
@@ -31,5 +31,17 @@ body {
     transition: all 0.2s;
   }
 
+/* This is for the contact page */
+
+input [type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Makes sure that padding and width stays in place */
+  margin-top: 6px; /* Adds a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allows the user to vertically resize the textarea (not horizontally) */
+}
 
 /* FOOTER */
