--- a/style.css
+++ b/style.css
@@ -44,4 +44,26 @@ input [type=text], select, textarea {
   resize: vertical /* Allows the user to vertically resize the textarea (not horizontally) */
 }
 
+/* Submit button */
+input [type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When mouse hovers, color change. */
+input [type=submit] :hover {
+  background-color: #45a049;
+}
+
+/* Background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
 /* FOOTER */
