--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   h5,
   h6 {
     font-weight: 800;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Lora', 'Times New Roman', serif;
   }
   
   a {
@@ -107,7 +107,7 @@ body {
     font-size: 24px;
     font-weight: 600;
     margin: 10px 0 30px;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Lora', 'Times New Roman', serif;
   }
   
   header.masthead .post-heading .meta {
