--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   p {
     line-height: 1.5;
     margin: 30px 0;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
   
   p a {
@@ -22,7 +23,7 @@ body {
   h5,
   h6 {
     font-weight: 800;
-    font-family: 'Lora', 'Times New Roman', serif;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;;
   }
   
   a {
