--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   h5,
   h6 {
     font-weight: 800;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;;
+    font-family: 'Lora', 'Times New Roman', serif;
   }
   
   a {
