--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ justify-content: flex-end;
 }
 .navbar-brand{
  font-family: 'lora';
+ font-size: 150%;
+ font-weight: bold;
+ margin-left: 30px;
 }
 .nav-link{
   margin-right: 50px;
