--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ header.masthead .post-heading .meta a {
   height: 100%;
      width: 100%;
      padding: 25px;
+  border-radius: 50%;   
  }
  .about span{
   display: block;
