--- a/style.css
+++ b/style.css
@@ -397,3 +397,33 @@ footer .copyright {
   padding-right: 1.1rem;
   }
   }
+
+  /* This is for the gallery grid page */
+
+  .gcontainer{
+    margin: 10%;
+}
+
+
+/*.carousel-inner > .item > img {
+    width:640px;
+    height: 500px;
+  }*/
+
+.carousel {
+  width: 100%;
+  height: <500px;
+  overflow:hidden;
+}
+
+.carousel .item {
+    width: 100%;
+    height: <500px;
+    overflow: hidden;
+}
+
+.carousel .item img{
+    width: 100%;
+    height: <500px;
+    overflow: hidden;
+}
