--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h6 {
 }
 
 a {
-  color: #212529;
+  
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
@@ -270,14 +270,14 @@ background-color: rgb(27, 27, 27);
 }
 
 .btn-primary {
-background-color: rgb(27, 27, 27) !important;
-border-color: rgb(27, 27, 27) !important;
+background-color: white;
+border-color: white;;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
 color: #fff;
-background-color: rgb(27, 27, 27) !important;
-border-color: rgb(27, 27, 27) !important;
+background-color: white;
+border-color: white;
 }
 
 .btn-lg {
@@ -350,12 +350,12 @@ footer .copyright {
   text-transform: uppercase;
   border-radius: 0;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background-color: rgb(39, 39, 39) !important
+  background-color: white;
 }
 
 .btn-primary {
-  background-color: rgb(39, 39, 39) !important;
-  border-color: rgb(39, 39, 39) !important;
+  background-color: white;
+  border-color: white;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
