--- a/style.css
+++ b/style.css
@@ -405,29 +405,50 @@ footer .copyright {
   /* This is for the gallery grid page */
 
   .gcontainer{
-    margin: 10%;
-}
+    margin: 5%;
+  }
+    
+  #madridCarousel{
+    margin: 0 auto;
+  }
 
-
-/*.carousel-inner > .item > img {
-    width:640px;
-    height: 500px;
-  }*/
 
 .carousel {
-  width: 100%;
-  height: <500px;
+  width: auto;
+  height: 500px;
   overflow:hidden;
 }
 
 .carousel .item {
-    width: 100%;
-    height: <500px;
+    width: auto;
+    height: 500px;
     overflow: hidden;
 }
 
 .carousel .item img{
-    width: 100%;
-    height: <500px;
+    width: auto;
+    height: 500px;
     overflow: hidden;
 }
+
+@media (min-width: 600px){
+.carousel {
+  width: 500px;
+  height: auto;
+  overflow:hidden;
+}
+
+.carousel .item {
+    width: 500px;
+    height: auto;
+    overflow: hidden;
+}
+
+.carousel .item img{
+    width: 500px;
+    height: auto;
+    overflow: hidden;
+}
+}
+
+
