--- a/style.css
+++ b/style.css
@@ -399,11 +399,11 @@ footer .copyright {
   }
   }
 
-  /* This is for the gallery grid page */
+  /* CSS for the gallery page */
 
   .gbackground{
     width: 100%;
-    height: 100%;
+    height: 79%;
     position: absolute;
     z-index: -1;
   }
@@ -418,45 +418,37 @@ footer .copyright {
     position: relative;
     z-index: 99;
   }
-    
+
   #madridCarousel{
     margin: 0 auto; 
     border: 8px double black;
   }
-
+ /* bigger screens */
 .carousel {
   width: 250px;
-  height: 375px;
-  
+  height: 375px; 
 }
-
 .carousel .carousel-item {
     height: 375px;
 }
-
 .carousel .carousel-item img{
     height: 360px;
 }
-
+/* smaller screens */
 @media (min-width: 600px){
-
   #madridCarousel{
     margin: 0 auto;
   }
-
   .carousel {
     width: 339px;
     height: 500px;
   }
-
   .carousel .carousel-item {
       height: 500px;
   }
-
   .carousel .carousel-item img{
       height: 484px;
   }
-
 }
 
 
