--- a/style.css
+++ b/style.css
@@ -403,7 +403,7 @@ footer .copyright {
 
   .gbackground{
     width: 100%;
-    height: 62%;
+    height: 445px;
     position: absolute;
     z-index: -1;
   }
@@ -423,7 +423,7 @@ footer .copyright {
     margin: 0 auto; 
     border: 8px double black;
   }
- /* bigger screens */
+ /* smaller screens */
 .carousel {
   width: 250px;
   height: 375px; 
@@ -434,11 +434,11 @@ footer .copyright {
 .carousel .carousel-item img{
     height: 360px;
 }
-/* smaller screens */
+/* bigger screens */
 @media (min-width: 600px){
   .gbackground{
     width: 100%;
-    height: 79%;
+    height: 570px;
     position: absolute;
     z-index: -1;
   }
