--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* GENERAL */
+
 body {
   font-size: 20px;
   color: #212529;
@@ -46,9 +48,9 @@ justify-content: flex-end;
 .nav-link{
   margin-right: 50px;
     }
-/* NavBar */
+/* END NavBar */
 
-
+/*HEADER*/
 header.masthead {
   margin-bottom: 50px;
   background: no-repeat center center;
@@ -147,6 +149,7 @@ header.masthead .post-heading .meta a {
     font-size: 30px;
   }
 }
+/*END OF HEADER*/
 /* This is for the home grid page */
   
 .section-heading {
@@ -246,7 +249,7 @@ header.masthead .post-heading .meta a {
  } 
 /* This is for the about page */
 
-/* FOOTER */
+/* FOOTER FOR EVERYONE */
 footer .list-inline {
 margin: 0;
 padding: 0;
